--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "isbot": "^3.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
